# lsh-core

./: .clang-format  .clang-format-ignore  .gitignore  CITATION.cff  NOTICE  README.md  library.json  pyproject.toml
.github/workflows/: ci.yml  doxygen-pages.yml
docs/: Doxyfile  cookbook.md  lsh_devices.schema.json  mainpage.md  static-toml-config.md
examples/all-options-toml/: README.md  lsh_devices.lock.toml  lsh_devices.toml
examples/avr-board-matrix/: README.md  lsh_devices.lock.toml  lsh_devices.toml  platformio.ini
examples/cookbook/: README.md  lsh_devices.lock.toml  lsh_devices.toml
examples/multi-device-project/: README.md  lsh_devices.lock.toml  lsh_devices.toml  platformio.ini
include/: etl_profile.h  lsh.hpp  lsh_user_macros.hpp
src/communication/: bridge_serial.cpp  bridge_serial.hpp  bridge_sync.cpp  bridge_sync.hpp  checked_writer.hpp  deserializer.cpp  deserializer.hpp  esp_com.cpp  esp_com.hpp  msgpack_serial_framing.cpp  msgpack_serial_framing.hpp  payload_utils.hpp  serializer.cpp  serializer.hpp
src/config/: configurator.cpp  configurator.hpp  static_config.hpp
src/core/: lsh_core.cpp  network_clicks.cpp  network_clicks.hpp
src/device/: actuator_manager.cpp  actuator_manager.hpp  clickable_manager.cpp  clickable_manager.hpp  indicator_manager.cpp  indicator_manager.hpp
src/internal/: avr_fast_io.hpp  cpp_features.hpp  etl_algorithm.hpp  (+11 more)
tests/: __init__.py  test_static_config_generator.py
tools/: __init__.py  generate_lsh_static_config.py  migrate_lsh_config.py  platformio_lsh_static_config.py  update_lsh_protocol.py
(+82 files in other folders)
